# Elections

./: Address.cpp  Address.h  Ballot.cpp  Ballot.h  CMakeLists.txt  Citizen.cpp  Citizen.h  Date.cpp  Date.h  ElectionCycle.cpp  ElectionCycle.h  Party.cpp  Party.h  README.txt  Result.cpp  Result.h  knownIssues.txt  main.cpp  mainFunction.cpp
