cmake_minimum_required(VERSION 3.15)
project(pleaseFinal)

set(CMAKE_CXX_STANDARD 14)

add_executable(pleaseFinal main.cpp Address.h Address.cpp Ballot.h Ballot.cpp Citizen.h Citizen.cpp Date.h Date.cpp ElectionCycle.cpp ElectionCycle.h mainFunction.cpp mainFunction.h Party.h Party.cpp Result.h Result.cpp Candidate.cpp Candidate.h BallotIsolation.cpp BallotIsolation.h BallotMilitary.cpp BallotMilitary.h BallotMilitaryIsolation.cpp BallotMilitaryIsolation.h CitizenException.h Array.h)